--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -17,7 +17,7 @@
 <resources>
     <string name="app_name">那樣記賬</string>
     <!-- 测试是否是简体中文环境 -->
-    <string name="text_zh">簡體字</string>
+    <string name="text_i18n">繁體</string>
 
     <string name="toast_add_record_fail">記賬失敗，請重試</string>
     <string name="toast_modify_record_fail">記錄修改失敗</string>
