--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -146,6 +146,7 @@
     <string name="text_choose_year">選擇年份</string>
     <string name="text_year">年</string>
     <string name="text_month">月</string>
+    <string name="text_month_tip">注：月份為自然月</string>
 
     <!-- 设置 -->
     <string name="text_setting">設置</string>
