--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -149,7 +149,7 @@
     <string name="text_month_tip">Note: Natural month</string>
 
     <!-- 设置 -->
-    <string name="text_setting">Setting</string>
+    <string name="text_setting">Settings</string>
     <string name="text_money">Bookkeeping</string>
     <string name="text_no_setting">no data</string>
     <string name="text_monty_budget">Monthly Budget</string>
@@ -170,7 +170,7 @@
     <string name="text_lock_record">Lock Record</string>
     <string name="text_last_asset">Record the last used asset</string>
     <string name="text_custom">Individuation</string>
-    <string name="text_start_day_of_month">Starting date of the month</string>
+    <string name="text_start_day_of_month">Start of the month</string>
     <string name="text_lock_record_off">Records can be edited and deleted</string>
     <string name="text_lock_record_on">Records cannot be edited or deleted</string>
     <string name="text_manager">Manager</string>
